styles.css
@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');

* {
    margin: 0;
    font-family: sans-serif;
    box-sizing: border-box;
}

body {
    background-image: url("images/Starry-BG.png");
    background-repeat: repeat;
    background-attachment: fixed;
    background-color: #14141c;
}



nav {
    position: sticky;
    top: 0;
    left: 0;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    height: 80px;
    padding: 0 20px;
}

img.icon {
    width: 25px;
    height: 25px;
    margin: 10px;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
}

img.icon#twitter {
    background-image: url("images/icons/twitter-icon.png");
}
img.icon#twitter:hover,
img.icon#twitter:active {
    background-image: url("images/icons/twitter-icon-blue.png");
}

img.icon#itch {
    background-image: url("images/icons/itch-icon.png");
}
img.icon#itch:hover,
img.icon#itch:active {
    background-image: url("images/icons/itch-icon-red.png");
}

img.icon#mail {
    background-image: url("images/icons/mail-icon.png");
}
img.icon#mail:hover,
img.icon#mail:active {
    background-image: url("images/icons/mail-icon-green.png");
}

img.studio-logo {
    width: 80px;
    height: 80px;
    position: absolute;
    left: 20px;
    top: 0;
}



header {
    width: 100%;
    height: calc(100vh - 160px);
}

div.wrapper {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

img.main-logo {
    width: 75%;
    height: auto;
    
}



div.down-arrow {
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
}

img.down-arrow {
    width: 80px;
    height: 80px;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    background-image: url("images/icons/down-arrow-white.png");
}
img.down-arrow:hover {
    background-image: url("images/icons/down-arrow-grey.png");
}


section.blurb {
    margin: 80px 10px;
}

section.blurb h2,
section.blurb h2 a,
section.blurb h2 a:visited {
    font-family: 'Russo One', sans-serif;
    color: white;
    font-size: 40px;
    text-align: center;
    margin: 50px 0;
    background-color: #14141c;
}

section.blurb h2 a:hover {
    color: #bbbbbb;
}

section.blurb h1 {
    font-family: 'Russo One', sans-serif;
    color: white;
    font-size: 50px;
    text-align: center;
    margin: 50px 0;
    background-color: #14141c;
}

section.blurb p {
    font-family: 'Russo One', sans-serif;
    color: white;
    font-size: 30px;
    text-align: left;
    margin: 50px 15%;
    background-color: #14141c;
}


.fade-in {
    display: none;
}

